[package]
name = "oampris"
edition = "2024"

[dependencies]
openaction = "2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
zbus = "3"
zvariant = "3"
futures-util = "0.3"
simplelog = "0.12"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
infer = "0.19"
anyhow = "1.0"
